--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,10 @@ edition = "2021"
 
 [dependencies]
 lazy_static = "1.4"
-chrono = "0.4"
+serde = "1.0"
+serde_json = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
+md5 = "0.7"
 reqwest = { version = "0.11", features = ["blocking"] }
 roxmltree = "0.14"
 actix-http = "2"
