--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,6 @@
+# Enable strip feature
+cargo-features = ["strip"]
+
 [package]
 name = "this-week-in-past"
 version = "0.1.0"
@@ -16,3 +19,9 @@ actix-web = "3"
 actix-files = "0.5"
 evmap = "10"
 clokwerk = "0.3"
+kamadak-exif = "0.5"
+rayon = "1.5"
+
+# Strip debug symbols in release mode
+[profile.release]
+strip = "symbols"
