feat: added geo location parsing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ evmap = "10"
 clokwerk = "0.3"
 kamadak-exif = "0.5"
 rayon = "1.5"
+regex = "1.5"
 
 # Strip debug symbols in release mode
 [profile.release]
