feat: use my exif reader fork

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ actix-web = "3"
 actix-files = "0.5"
 evmap = "10"
 clokwerk = "0.3"
-kamadak-exif = "0.5"
+exif = { git = "https://github.com/RouHim/exif-rs", rev = "1334172dc3c3d48a159619c7f1b1b952764ec530" }
 rayon = "1.5"
 regex = "1.5"
 
