--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,32 +4,33 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-lazy_static = "1.4"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-chrono = { version = "0.4", features = ["serde"] }
-now = "0.1"
-md5 = "0.7"
-reqwest = { version = "0.11", features = ["blocking"] }
-roxmltree = "0.14"
-actix-http = { version = "3" }
-actix-web = "4"
-actix-files = "0.6"
-evmap = "10"
-clokwerk = "0.3"
-kamadak-exif = "0.5"
-rayon = "1.5"
-regex = "1.5"
-base64 = "0.13"
-image = "0.24"
-cacache = "10"
-rand = "0.8"
+lazy_static = "1.4.0"
+serde = { version = "1.0.137", features = ["derive"] }
+serde_json = "1.0.81"
+chrono = { version = "0.4.19", features = ["serde"] }
+now = "0.1.2"
+time = "0.2.23"
+md5 = "0.7.0"
+reqwest = { version = "0.11.10", features = ["blocking"] }
+roxmltree = "0.14.1"
+actix-http = { version = "3.0.4" }
+actix-web = "4.0.1"
+actix-files = "0.6.0"
+evmap = "10.0.2"
+clokwerk = "0.3.5"
+kamadak-exif = "0.5.4"
+rayon = "1.5.3"
+regex = "1.5.5"
+base64 = "0.13.0"
+image = "0.24.2"
+cacache = "10.0.1"
+rand = "0.8.5"
 log = "0.4.0"
-mime_guess = "2.0"
+mime_guess = "2.0.4"
 
 [dev-dependencies]
-assertor = "0.0"
-pretty_assertions = "1.2"
+assertor = "0.0.1"
+pretty_assertions = "1.2.1"
 
 # Strip debug symbols in release mode
 [profile.release]
