feat: added multi stage dockerfile

--- a/.github/workflows/code-style.yaml
+++ b/.github/workflows/code-style.yaml
@@ -11,8 +11,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Use rust toolchain
-        uses: actions/setup-rust-toolchain@v1
+      - name: Install rust toolchain
+        uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: nightly
