--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -1,8 +1,6 @@
 name: Build container image
 on:
   push:
-    branches:
-      - main
   pull_request:
 
 jobs:
@@ -24,7 +22,7 @@ jobs:
         run: cargo fmt --all -- --check
 
   verify-code:
-    name: Verify code for common mistakes
+    name: Verify code for common mistakes        if: github.ref_name == 'main' # only push the image if the branch is main
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -124,6 +122,7 @@ jobs:
     name: Push the image
     needs: [ scan-container, test-container ]
     runs-on: ubuntu-latest
+    if: github.ref_name == 'main' # only push the image if the branch is main
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
