--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -25,7 +25,7 @@ jobs:
           severity: 'CRITICAL,HIGH'
 
   check-repo:
-    name: Check repo
+    name: Check repository
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -77,7 +77,7 @@ jobs:
         run: cargo clippy
 
   test:
-    name: Run tests
+    name: Run application tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -132,7 +132,7 @@ jobs:
           path: this-week-in-past.tar
 
   scan-container:
-    name: Scan container security
+    name: Scan container for vulnerabilities
     needs: build
     runs-on: ubuntu-latest
     steps:
