--- a/.github/workflows/scheduled-security-audit.yaml
+++ b/.github/workflows/scheduled-security-audit.yaml
@@ -2,6 +2,7 @@ name: Security Audits
 on:
   schedule:
     - cron: '0 0 * * *'  # every day at midnight
+  workflow_dispatch: # allow manual execution
 
 jobs:
   docker-audit:
