--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -87,13 +87,13 @@ jobs:
       - name: Install rust toolchain
         uses: actions-rs/toolchain@v1
         with:
-          profile: minimal
+          profile: default
           toolchain: nightly
 
-      - uses: Swatinem/rust-cache@v1 # use /rust/cargo caching
+#      - uses: Swatinem/rust-cache@v1 # use /rust/cargo caching
 
       - name: Test code
-        run: cargo test -j 1
+        run: cargo test
 
   build:
     name: Build container image
