--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -169,8 +169,13 @@ jobs:
       - name: restore docker image
         run: docker load --input this-week-in-past.tar
 
+      - name: Prepare test env
+        run: | 
+          mkdir -p /tmp/test
+          wget https://raw.githubusercontent.com/ianare/exif-samples/master/jpg/gps/DSCN0010.jpg -O /tmp/test/DSCN0010.jpg          
+
       - name: Start test container
-        run: docker run -d --name test-container -p 8080:8080 -e RESOURCES_PATH=/ rouhim/this-week-in-past:${{ github.sha }}
+        run: docker run -d --name test-container -p 8080:8080 -v /tmp/test:/resources rouhim/this-week-in-past:${{ github.sha }}
 
       - name: Test container web api
         run: wget -q -O /dev/null -t 1 -T 2 http://localhost:8080/api/health
