--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -189,6 +189,9 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref_name == 'main' # only push the image if the branch is main
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
