--- a/.github/workflows/scheduled-security-audit.yaml
+++ b/.github/workflows/scheduled-security-audit.yaml
@@ -12,14 +12,31 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Build an image from Dockerfile
+      - name: Install rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: default
+          toolchain: stable
+
+      - name: Prepare build environment
         run: |
-          docker build -t rouhim/this-week-in-past:${{ github.sha }} .
+          sudo apt update && sudo apt install -y musl-tools
+          rustup target add x86_64-unknown-linux-musl
+
+      - uses: Swatinem/rust-cache@v1 # use /rust/cargo caching
+
+      - name: Build application
+        run: |
+          cargo build --release --target x86_64-unknown-linux-musl
+
+      - name: Build container image
+        run: |
+          docker build -t rouhim/this-week-in-past:latest .
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'rouhim/this-week-in-past:${{ github.sha }}'
+          image-ref: 'rouhim/this-week-in-past:latest'
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
@@ -41,7 +58,8 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           scan-type: 'fs'
-          format: 'table'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
           exit-code: '1'
           ignore-unfixed: true
           severity: 'CRITICAL,HIGH'
@@ -63,7 +81,8 @@ jobs:
         with:
           scan-type: 'config'
           hide-progress: false
-          format: 'table'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
           exit-code: '1'
           ignore-unfixed: true
           severity: 'CRITICAL,HIGH'
