--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ chrono = { version = "0.4.19", features = ["serde"] }
 now = "0.1.2"
 time = "0.3.9"
 md5 = "0.7.0"
-reqwest = { version = "0.11.11", features = ["blocking"] }
+reqwest = "0.11.11"
 actix-http = { version = "3.1.0" }
 actix-web = "4.1.0"
 actix-files = "0.6.1"
@@ -32,6 +32,7 @@ openssl = { version = "0.10.40", features = ["vendored"] }
 assertor = "0.0.1"
 pretty_assertions = "1.2.1"
 actix-rt = "2.7.0"
+reqwest = { version = "0.11.10", features = ["blocking"] }
 
 # Strip debug symbols in release mode
 [profile.release]
