--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ now = "0.1.2"
 time = "0.3.9"
 md5 = "0.7.0"
 reqwest = "0.11.11"
-actix-http = { version = "3.1.0" }
+actix-http = "3.1.0"
 actix-web = "4.1.0"
 actix-files = "0.6.1"
 evmap = "10.0.2"
