--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -108,29 +108,28 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Prepare build environment
+        run: sudo apt update && sudo apt install -y musl-tools
+
       - name: Install rust toolchain
         uses: actions-rs/toolchain@v1
         with:
           profile: default
           toolchain: stable
-
-      - name: Prepare build environment
-        run: |
-          sudo apt update && sudo apt install -y musl-tools
-          rustup target add x86_64-unknown-linux-musl
+          target: x86_64-unknown-linux-musl
 
       - uses: Swatinem/rust-cache@v1 # use /rust/cargo caching
 
       - name: Build application
-        run: |
-          cargo build --release --target x86_64-unknown-linux-musl
+        run: cargo build --release --target x86_64-unknown-linux-musl
 
       - name: Build container image
         run: |
           docker build -t rouhim/this-week-in-past:latest .
           docker save rouhim/this-week-in-past:latest > this-week-in-past.tar
 
-      - uses: actions/upload-artifact@v3
+      - name: Upload container image
+        uses: actions/upload-artifact@v3
         with:
           name: docker-artifact
           path: this-week-in-past.tar
