--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -10,7 +10,7 @@ jobs:
 
   check-config:
     name: Check config files
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -27,7 +27,7 @@ jobs:
 
   check-repo:
     name: Check repository
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -43,7 +43,7 @@ jobs:
 
   check-code-style:
     name: Check code style
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -61,7 +61,7 @@ jobs:
 
   check-code:
     name: Check code
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -79,7 +79,7 @@ jobs:
 
   test:
     name: Run application tests
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     env:
       BIGDATA_CLOUD_API_KEY: ${{ secrets.BIGDATA_CLOUD_API_KEY }}
       OPEN_WEATHER_MAP_API_KEY: ${{ secrets.OPEN_WEATHER_MAP_API_KEY }}
@@ -100,7 +100,7 @@ jobs:
 
   check-unused-dependencies:
     name: Check for unused deps
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -123,7 +123,7 @@ jobs:
   build:
     name: Build container image
     needs: [ check-config, check-repo, check-code-style, check-code, test, check-unused-dependencies ]
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     env:
       DOCKER_BUILDKIT: 1 # use the new docker build backend
     steps:
@@ -159,7 +159,7 @@ jobs:
   scan-container:
     name: Scan container for vulnerabilities
     needs: build
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Download Docker Image
         uses: actions/download-artifact@v3
@@ -182,7 +182,7 @@ jobs:
   test-container:
     name: Test container image
     needs: build
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Download Docker Image
         uses: actions/download-artifact@v3
@@ -210,7 +210,7 @@ jobs:
   push-container:
     name: Push container image
     needs: [ scan-container, test-container ]
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     if: github.ref_name == 'main' # only push the image if the branch is main
     steps:
       - name: Checkout code
